07-camelk-knative-bridge-ingress/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: knative-ingress
  namespace: knative-eventing
spec:
  defaultBackend:
    service:
      name: broker-ingress
      port:
        number: 80
